--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:screenOrientation="portrait">
+        android:screenOrientation="portrait"
+        android:resizeableActivity="false"
+        android:supportsPictureInPicture="false">
         <activity
             android:name=".EnterActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
