--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,12 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.easyeducation.schooldiary"
-        minSdkVersion 16
+        minSdkVersion 20
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        android.defaultConfig.vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
