--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsPictureInPicture="false"
         android:supportsRtl="true"
         android:theme="@style/DiaryTheme">
-        <activity android:name=".NotesActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".NotesActivity" />
         <activity
             android:name=".EnterActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
